; ModuleID = '/home/carl/AnghaBench/linux/arch/powerpc/oprofile/extr_op_model_pa6t.c_pa6t_stop.c'
source_filename = "/home/carl/AnghaBench/linux/arch/powerpc/oprofile/extr_op_model_pa6t.c_pa6t_stop.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

@SPRN_PA6T_MMCR0 = common dso_local global i32 0, align 4
@PA6T_MMCR0_FCM0 = common dso_local global i32 0, align 4
@oprofile_running = common dso_local global i64 0, align 8
@.str = private unnamed_addr constant [28 x i8] c"stop on cpu %d, mmcr0 %llx\0A\00", align 1
@llvm.used = appending global [1 x i8*] [i8* bitcast (void ()* @pa6t_stop to i8*)], section "llvm.metadata"

; Function Attrs: noinline nounwind optnone uwtable
define internal void @pa6t_stop() #0 {
  %1 = alloca i32, align 4
  %2 = load i32, i32* @SPRN_PA6T_MMCR0, align 4
  %3 = call i32 @mfspr(i32 %2)
  store i32 %3, i32* %1, align 4
  %4 = load i32, i32* @PA6T_MMCR0_FCM0, align 4
  %5 = load i32, i32* %1, align 4
  %6 = or i32 %5, %4
  store i32 %6, i32* %1, align 4
  %7 = load i32, i32* @SPRN_PA6T_MMCR0, align 4
  %8 = load i32, i32* %1, align 4
  %9 = call i32 @mtspr(i32 %7, i32 %8)
  store i64 0, i64* @oprofile_running, align 8
  %10 = call i32 (...) @smp_processor_id()
  %11 = load i32, i32* %1, align 4
  %12 = call i32 @pr_debug(i8* getelementptr inbounds ([28 x i8], [28 x i8]* @.str, i64 0, i64 0), i32 %10, i32 %11)
  ret void
}

declare dso_local i32 @mfspr(i32) #1

declare dso_local i32 @mtspr(i32, i32) #1

declare dso_local i32 @pr_debug(i8*, i32, i32) #1

declare dso_local i32 @smp_processor_id(...) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
